--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <center>
-    <h1>Error Makes Clever Academy 🚀</h1>
+    <h1>Sarvesh Practice 🚀</h1>
     <h5>Training | Tech News | Freshers Guide</h5>
     <p>Empowering Young developers to level up their skills through corporate training</p>
     </center>
@@ -44,7 +44,7 @@
     <hr>
         <p>
             <center>
-            <a href="register.html">Register for a course</a> <a href="https://www.instagram.com/">Instagram</a> <a href="https://www.youtube.com/">Youtube</a>
+            <a href="https://main--frolicking-rugelach-44085f.netlify.app/">Register for a course</a> <a href="https://github.com/Kavin-Sarvesh">GitHub</a> <a href="https://www.youtube.com/">Youtube</a>
             </center>
         </p>
     
